gcc/testsuite/rust/rustc/ui/error-codes/E0446.rs
mod foo {
    struct Bar(u32);

    pub fn bar() -> Bar { // { dg-error ".E0446." "" { target *-*-* } }
        Bar(0)
    }
}

fn main() {}

